feature/ajout phpmyadmin

--- a/compose.yaml
+++ b/compose.yaml
@@ -55,6 +55,18 @@ services:
       # - ./docker/db/data:/var/lib/mysql:rw
 ###< doctrine/doctrine-bundle ###
 
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    restart: unless-stopped
+    environment:
+      PMA_HOST: database
+      PMA_USER: root
+      PMA_PASSWORD: motdepasse_root
+    ports:
+      - "8080:80"
+    depends_on:
+      - database
+
 
 volumes:
   caddy_data:
